--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -25,7 +25,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SecondaryActivity">
+        tools:context=".DetectionActivity">
 
         <TextView
             android:padding="30dp"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_navigate_next_white_48dp" />
+        app:srcCompat="@drawable/refresh" />
 
 </android.support.design.widget.CoordinatorLayout>
 
